--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
   </head>
   <body>
     <header>
@@ -61,13 +61,25 @@
       <h2>What Are We Doing</h2>
       <ul>
         <li>
-          <img src="./images/picture1.jpg" width="360" alt="Picture 1" />
+          <img
+            src="./images/picture1.jpg"
+            width="360"
+            alt="Statistic on the monitor"
+          />
         </li>
         <li>
-          <img src="./images/picture2.jpg" width="360" alt="Picture 2" />
+          <img
+            src="./images/picture2.jpg"
+            width="360"
+            alt="Chats on the smartphone"
+          />
         </li>
         <li>
-          <img src="./images/picture3.jpg" width="360" alt="Picture 3" />
+          <img
+            src="./images/picture3.jpg"
+            width="360"
+            alt="Recommended articles on the phone"
+          />
         </li>
       </ul>
     </section>
